# qa_guru_7_19

./: .gitignore  config.py  pyproject.toml
allure-report/: 01859866-c388-4f83-a070-b715793e610a-result.json  024e8c17-53d4-43e7-b39f-a0b5e580fc28-attachment.txt  02dbf112-9e45-4a0c-a308-a662f3a91fdd-attachment.json  049fbb77-1094-4b35-b16d-6d7a53402f41-attachment.txt  04cec380-d4d1-42b9-9a89-1974eff5a163-attachment.txt  052abb70-ef45-4814-a3df-7e69132c256a-result.json  079c14f4-fc4b-46b2-877e-068f40845054-result.json  0add271f-a9df-4c6f-b672-e0ffbd1b1661-attachment.txt  1221895c-2c58-44b9-8588-f3cb7d44b0e9-result.json  1adf0d94-5a7c-47fa-bce4-cdae6ae937c2-attachment.json  1d07d865-fd60-4f07-8252-145015acc8b9-attachment.txt  1de1ab6e-cd9c-452d-9a7d-548cb998da12-attachment.json  218513cd-1e03-4b40-80b5-8031ddb020a2-result.json  21fae3ba-1443-4482-85d3-a519c534daaf-result.json  281be75e-18e5-410f-83dd-f5f82ee28097-attachment.txt  2b392bd6-215e-4ff5-9592-750f50ee0618-attachment.txt  2bfebcf5-2a65-4780-b69d-9bc74a6b3b0a-attachment.json  2e7ae866-c427-4685-91d4-e4083d75f708-attachment.json  31a484c7-6b2b-4a50-99e3-cdc58e7540fb-attachment.txt  340b6c62-a0a0-4ad2-8164-0dfbb04ba8ec-attachment.json  349e46d6-da12-483a-ae8f-44402fd2e4f2-result.json  34aca568-08a9-4a1c-861a-3770aa1d5392-container.json  35be3d5e-197e-4fad-9c44-3c9ce4646669-attachment.json  3e18258d-9364-4901-aa5b-ef61b1778b9e-container.json  3fd9ff45-beac-4118-a202-d2e6f74aac10-result.json  451609e3-2b28-48d1-9818-78bf7cc2363b-attachment.txt  4c3d7082-3877-4927-be00-fce28c37fac1-attachment.json  (+74 more)
src/: base_request.py
(+14 files in other folders)
